# socc-pair

./: Cargo.toml  README.md
src/: main.rs
