[package]
name = "socc-pair"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "*"
tempfile = "*"
error-chain = "*"
tokio =  { version = "*", features = ["full"] }
simplelog = "0.10.2"
clap = "2.33"
log = "0.4"