[package]
name = "socc-pair"
description = "compares local minidump-stackwalk output to socorro (crash-stats.mozilla.org)"
license = "MIT"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.68"
tempfile = "3.2.0"
error-chain = "0.12.4"
tokio =  { version = "1.12.0", features = ["full"] }
simplelog = "0.10.2"
clap = "2.33"
log = "0.4"